<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <LinearLayout 
            android:layout_width="match_parent"
    		android:layout_height="match_parent"
    		android:orientation="vertical" >
		    <RelativeLayout
				android:id="@+id/temp_graph" 
				android:layout_width="match_parent"
				android:layout_height="300dp" />
		    <TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_horizontal"
		        android:text="@string/temperature"
		        android:textSize="15dp"
		        android:textStyle="bold" />
		    
		    <RelativeLayout
				android:id="@+id/humidity_graph" 
				android:layout_width="match_parent"
				android:layout_height="300dp" />
		    <TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_horizontal"
		        android:text="@string/humidity"
		        android:textSize="15dp"
		        android:textStyle="bold" />
		    
		    <RelativeLayout
				android:id="@+id/ppfd_graph" 
				android:layout_width="match_parent"
				android:layout_height="300dp" />
		    <TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_horizontal"
		        android:text="@string/ppfd"
		        android:textSize="15dp"
		        android:textStyle="bold" />
		    
		    <RelativeLayout
				android:id="@+id/co2_graph" 
				android:layout_width="match_parent"
				android:layout_height="300dp" />
		    <TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_horizontal"
		        android:text="@string/co2"
		        android:textSize="15dp"
		        android:textStyle="bold" />
    	</LinearLayout>
	</ScrollView>
</LinearLayout>
